# rosbag_dataset

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py  test.py
config/: topics_to_save.yml
launch/: rosbag_dataset.launch
scripts/: rosbag_handler.py
